--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Divine ERP Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -18,6 +19,8 @@
   <p id="error" class="error"></p>
 </div>
 
-<script src="app.js"></script>
+<!-- Absolute JS Path -->
+<script src="https://asrock420.github.io/divine-erp-system/app.js"></script>
+
 </body>
 </html>
