--- a/dashboard.html
+++ b/dashboard.html
@@ -1,172 +1,217 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Divine ERP Dashboard</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Divine ERP Dashboard</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="layout">
 
-  <div class="sidebar">
-    <h2>Divine ERP</h2>
-    <ul>
-      <li onclick="showDashboard()">Dashboard</li>
-      <li onclick="showLeads()">Leads</li>
-    </ul>
-    <button onclick="logout()">Logout</button>
-  </div>
+<div class="sidebar">
+<h2>Divine ERP</h2>
+<ul>
+<li onclick="showDashboard()">Dashboard</li>
+<li onclick="showInstallments()">Installments</li>
+<li onclick="showPayroll()">Payroll</li>
+<li onclick="showProjects()">Projects</li>
+</ul>
+<button onclick="logout()">Logout</button>
+</div>
 
-  <div class="main">
+<div class="main">
 
-    <div id="dashboardSection">
-      <h1>Dashboard</h1>
-      <p id="userInfo"></p>
-      <div class="card">
-        <h3>Welcome</h3>
-        <p>This is your Real Estate ERP Control Panel.</p>
-      </div>
-    </div>
+<!-- ================= DASHBOARD ================= -->
+<div id="dashboardSection">
+<h1>Financial Overview</h1>
+<div id="summaryCards"></div>
+</div>
 
-    <div id="leadSection" style="display:none;">
-      <h1>Leads Module</h1>
+<!-- ================= INSTALLMENTS ================= -->
+<div id="installmentSection" style="display:none;">
+<h1>Installments</h1>
 
-      <div class="card">
-        <h3>Add New Lead</h3>
+<div class="card">
+<table width="100%">
+<thead>
+<tr>
+<th>Client</th>
+<th>Total</th>
+<th>Paid</th>
+<th>Due</th>
+<th>Status</th>
+<th>Action</th>
+</tr>
+</thead>
+<tbody id="installmentTable"></tbody>
+</table>
+</div>
 
-        <input type="text" id="client_name" placeholder="Client Name">
-        <input type="text" id="phone" placeholder="Phone">
-        <input type="text" id="project" placeholder="Project Name">
-        <input type="text" id="unit_type" placeholder="Unit Type">
-        <input type="number" id="budget" placeholder="Budget">
-        <input type="text" id="source" placeholder="Lead Source">
-        <input type="date" id="follow_up_date">
-        <textarea id="remarks" placeholder="Remarks"></textarea>
+</div>
 
-        <label>Manual Assign (Optional)</label>
-        <select id="assigned_to_dropdown">
-          <option value="">Auto Assign (Round Robin)</option>
-        </select>
+<!-- ================= PAYROLL ================= -->
+<div id="payrollSection" style="display:none;">
+<h1>Payroll Overview</h1>
+<div id="payrollData"></div>
+</div>
 
-        <button onclick="addLead()">Save Lead</button>
-      </div>
+<!-- ================= PROJECT DASHBOARD ================= -->
+<div id="projectSection" style="display:none;">
+<h1>Project Revenue Dashboard</h1>
+<div id="projectData"></div>
+</div>
 
-      <div class="card">
-        <h3>Lead List</h3>
-        <table width="100%">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Phone</th>
-              <th>Project</th>
-              <th>Status</th>
-              <th>Assigned</th>
-            </tr>
-          </thead>
-          <tbody id="leadTable"></tbody>
-        </table>
-      </div>
-    </div>
-
-  </div>
+</div>
 </div>
 
 <script>
 
-const BASE_URL = "https://script.google.com/macros/s/AKfycbytevmESfHiAM7KdQm71Gj2PTS8XWr5fRX5vO7RqGyoCF76rZ4vWzxnGWPl_5b6t2gt/exec";
+const BASE_URL="https://script.google.com/macros/s/AKfycbzL8GoZ3pySX9XPHIOVaFw4xm_wdlTlV2ngFEpPN7-qvugGsopJBOyS1Pzr_j3-ZnDt/exec";
 
 const user = JSON.parse(sessionStorage.getItem("user"));
-if(!user){ window.location.href = "index.html"; }
-
-document.getElementById("userInfo").innerText =
-  "Logged in as: " + user.name + " (" + user.role + ")";
+if(!user){ window.location.href="index.html"; }
 
 function logout(){
-  sessionStorage.clear();
-  window.location.href = "index.html";
+sessionStorage.clear();
+window.location.href="index.html";
+}
+
+function hideAll(){
+document.getElementById("dashboardSection").style.display="none";
+document.getElementById("installmentSection").style.display="none";
+document.getElementById("payrollSection").style.display="none";
+document.getElementById("projectSection").style.display="none";
 }
 
 function showDashboard(){
-  document.getElementById("dashboardSection").style.display = "block";
-  document.getElementById("leadSection").style.display = "none";
+hideAll();
+document.getElementById("dashboardSection").style.display="block";
+loadSummary();
 }
 
-function showLeads(){
-  document.getElementById("dashboardSection").style.display = "none";
-  document.getElementById("leadSection").style.display = "block";
-  loadLeads();
-  loadSalesUsers();
+function showInstallments(){
+hideAll();
+document.getElementById("installmentSection").style.display="block";
+loadInstallments();
 }
 
-function loadSalesUsers(){
-  fetch(BASE_URL,{
-    method:"POST",
-    body: JSON.stringify({action:"getSalesUsers"})
-  })
-  .then(res=>res.json())
-  .then(data=>{
-    const dropdown = document.getElementById("assigned_to_dropdown");
-    dropdown.innerHTML = '<option value="">Auto Assign (Round Robin)</option>';
-    data.forEach(user=>{
-      dropdown.innerHTML += `<option value="${user}">${user}</option>`;
-    });
-  });
+function showPayroll(){
+hideAll();
+document.getElementById("payrollSection").style.display="block";
+loadPayroll();
 }
 
-function addLead(){
-
-  fetch(BASE_URL,{
-    method:"POST",
-    body: JSON.stringify({
-      action:"addLead",
-      client_name: document.getElementById("client_name").value,
-      phone: document.getElementById("phone").value,
-      project: document.getElementById("project").value,
-      unit_type: document.getElementById("unit_type").value,
-      budget: document.getElementById("budget").value,
-      source: document.getElementById("source").value,
-      follow_up_date: document.getElementById("follow_up_date").value,
-      remarks: document.getElementById("remarks").value,
-      manual_assign: document.getElementById("assigned_to_dropdown").value,
-      created_by: user.name
-    })
-  })
-  .then(res=>res.json())
-  .then(data=>{
-    console.log("Response:", data);
-    alert("Lead Saved");
-    loadLeads();
-  })
-  .catch(error=>{
-    console.error("Error:", error);
-    alert("Error Saving Lead");
-  });
+function showProjects(){
+hideAll();
+document.getElementById("projectSection").style.display="block";
+loadProjects();
 }
 
-function loadLeads(){
-  fetch(BASE_URL,{
-    method:"POST",
-    body: JSON.stringify({action:"getLeads"})
-  })
-  .then(res=>res.json())
-  .then(data=>{
-    const table = document.getElementById("leadTable");
-    table.innerHTML="";
-    data.forEach(lead=>{
-      table.innerHTML+=`
-        <tr>
-          <td>${lead.client_name}</td>
-          <td>${lead.phone}</td>
-          <td>${lead.project}</td>
-          <td>${lead.status}</td>
-          <td>${lead.assigned_to}</td>
-        </tr>`;
-    });
-  });
+/* ================= INSTALLMENTS ================= */
+
+function loadInstallments(){
+fetch(BASE_URL,{
+method:"POST",
+body:JSON.stringify({action:"getInstallments"})
+})
+.then(res=>res.json())
+.then(data=>{
+const table=document.getElementById("installmentTable");
+table.innerHTML="";
+data.forEach(i=>{
+table.innerHTML+=`
+<tr>
+<td>${i.client}</td>
+<td>${i.total}</td>
+<td>${i.paid}</td>
+<td>${i.due}</td>
+<td>${i.status}</td>
+<td><button onclick="addPayment('${i.id}')">Pay</button></td>
+</tr>`;
+});
+});
 }
+
+function addPayment(id){
+let amount = prompt("Enter Payment Amount:");
+if(!amount) return;
+
+fetch(BASE_URL,{
+method:"POST",
+body:JSON.stringify({
+action:"addPayment",
+id:id,
+amount:amount
+})
+}).then(()=>loadInstallments());
+}
+
+/* ================= FINANCIAL SUMMARY ================= */
+
+function loadSummary(){
+fetch(BASE_URL,{
+method:"POST",
+body:JSON.stringify({action:"getFinancialSummary"})
+})
+.then(res=>res.json())
+.then(d=>{
+document.getElementById("summaryCards").innerHTML=`
+<div class="card">Total Revenue: ${d.revenue}</div>
+<div class="card">Outstanding: ${d.outstanding}</div>
+<div class="card">Overdue: ${d.overdue}</div>`;
+});
+}
+
+/* ================= PAYROLL ================= */
+
+function loadPayroll(){
+fetch(BASE_URL,{
+method:"POST",
+body:JSON.stringify({action:"getPayroll"})
+})
+.then(res=>res.json())
+.then(data=>{
+const container=document.getElementById("payrollData");
+container.innerHTML="";
+data.forEach(p=>{
+container.innerHTML+=`
+<div class="card">
+<strong>${p.name}</strong><br>
+Salary: ${p.salary}<br>
+Commission: ${p.commission}<br>
+Total Payable: ${p.total}
+</div>`;
+});
+});
+}
+
+/* ================= PROJECT DASHBOARD ================= */
+
+function loadProjects(){
+fetch(BASE_URL,{
+method:"POST",
+body:JSON.stringify({action:"getProjectDashboard"})
+})
+.then(res=>res.json())
+.then(data=>{
+const container=document.getElementById("projectData");
+container.innerHTML="";
+data.forEach(p=>{
+container.innerHTML+=`
+<div class="card">
+<strong>${p.project}</strong><br>
+Bookings: ${p.count}<br>
+Revenue: ${p.revenue}
+</div>`;
+});
+});
+}
+
+/* ================= AUTO LOAD ================= */
+
+showDashboard();
 
 </script>
-
 </body>
 </html>
