--- a/index.html
+++ b/index.html
@@ -1,83 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Divine ERP Login</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Divine ERP Login</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="login-box">
-  <h2>Divine ERP</h2>
+<div class="login-wrapper">
+<div class="login-card">
+<h2>Divine ERP</h2>
 
-  <input type="email" id="email" placeholder="Enter Email">
-  <input type="password" id="password" placeholder="Enter Password">
+<input type="email" id="email" placeholder="Email">
+<input type="password" id="password" placeholder="Password">
 
-  <button onclick="login()">Login</button>
-  <button class="secondary" onclick="createTestUser()">Create Test User (One Time Only)</button>
+<button onclick="login()">Login</button>
 
-  <p id="error" class="error"></p>
+</div>
 </div>
 
-<script>
-const BASE_URL = "https://script.google.com/macros/s/AKfycbzvPMZKRx9kqG92dZ1XnfnaH6u2qEiiJInMq-OUB-0KMEyXllHkYh-XkjJYOypmbrn2/exec";
-
-function login() {
-
-  const email = document.getElementById("email").value.trim();
-  const password = document.getElementById("password").value.trim();
-
-  if(!email || !password){
-    document.getElementById("error").innerText = "Email & Password required";
-    return;
-  }
-
-  fetch(BASE_URL, {
-    method: "POST",
-    body: JSON.stringify({
-      action: "login",
-      email: email,
-      password: password
-    })
-  })
-  .then(res => res.json())
-  .then(data => {
-
-    if(data.status === "success") {
-      sessionStorage.setItem("user", JSON.stringify(data.user));
-      window.location.href = "dashboard.html";
-    } else {
-      document.getElementById("error").innerText = "Invalid Credentials";
-    }
-
-  })
-  .catch(() => {
-    document.getElementById("error").innerText = "Server Error";
-  });
-}
-
-function createTestUser() {
-
-  fetch(BASE_URL, {
-    method: "POST",
-    body: JSON.stringify({
-      action: "createUser",
-      user_id: "U200",
-      full_name: "Admin User",
-      email: "admin@test.com",
-      password: "1234",
-      role: "Admin",
-      department: "Management",
-      phone: "01700000000",
-      basic_salary: 50000
-    })
-  })
-  .then(res => res.json())
-  .then(() => {
-    alert("User Created. Login with admin@test.com / 1234");
-  });
-}
-</script>
-
+<script src="app.js"></script>
 </body>
 </html>
