--- a/dashboard.html
+++ b/dashboard.html
@@ -10,74 +10,70 @@
 <div class="wrapper">
 
 <div class="sidebar">
-<h2>Divine ERP</h2>
-
-<ul>
-<li onclick="showSection('dashboard')" class="active">Dashboard</li>
-<li onclick="showSection('installments')">Installments</li>
-<li onclick="showSection('projects')">Projects</li>
-<li onclick="showSection('payroll')">Payroll</li>
-</ul>
-
-<button onclick="logout()">Logout</button>
+  <h2>Divine ERP</h2>
+  <ul>
+    <li onclick="showSection('dashboard')" class="active">Dashboard</li>
+    <li onclick="showSection('installments')">Installments</li>
+    <li onclick="showSection('projects')">Projects</li>
+    <li onclick="showSection('payroll')">Payroll</li>
+  </ul>
+  <button onclick="logout()">Logout</button>
 </div>
 
 <div class="main">
 
 <!-- DASHBOARD -->
 <div id="dashboard" class="section">
-<h1>Financial Overview</h1>
+  <h1>Financial Overview</h1>
 
-<div class="kpi-container">
-<div class="kpi green">
-<h3>Total Revenue</h3>
-<p id="revenue">0</p>
-</div>
+  <div class="kpi-container">
+    <div class="kpi green">
+      <h3>Total Revenue</h3>
+      <p id="revenue">0</p>
+    </div>
 
-<div class="kpi orange">
-<h3>Outstanding</h3>
-<p id="outstanding">0</p>
-</div>
+    <div class="kpi orange">
+      <h3>Outstanding</h3>
+      <p id="outstanding">0</p>
+    </div>
 
-<div class="kpi red">
-<h3>Overdue</h3>
-<p id="overdue">0</p>
-</div>
-</div>
-
+    <div class="kpi red">
+      <h3>Overdue</h3>
+      <p id="overdue">0</p>
+    </div>
+  </div>
 </div>
 
 <!-- INSTALLMENTS -->
 <div id="installments" class="section hidden">
-<h1>Installments</h1>
-
-<div class="card">
-<table>
-<thead>
-<tr>
-<th>Client</th>
-<th>Total</th>
-<th>Paid</th>
-<th>Due</th>
-<th>Status</th>
-<th>Action</th>
-</tr>
-</thead>
-<tbody id="installmentTable"></tbody>
-</table>
-</div>
+  <h1>Installments</h1>
+  <div class="card">
+    <table>
+      <thead>
+        <tr>
+          <th>Client</th>
+          <th>Total</th>
+          <th>Paid</th>
+          <th>Due</th>
+          <th>Status</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="installmentTable"></tbody>
+    </table>
+  </div>
 </div>
 
 <!-- PROJECTS -->
 <div id="projects" class="section hidden">
-<h1>Projects</h1>
-<div class="card" id="projectList"></div>
+  <h1>Project Dashboard</h1>
+  <div class="card" id="projectList"></div>
 </div>
 
 <!-- PAYROLL -->
 <div id="payroll" class="section hidden">
-<h1>Payroll</h1>
-<div class="card" id="payrollList"></div>
+  <h1>Payroll</h1>
+  <div class="card" id="payrollList"></div>
 </div>
 
 </div>
