--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <div class="login-card">
     <h2>Divine ERP</h2>
 
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
+    <input type="email" id="email" placeholder="Enter Email" required>
+    <input type="password" id="password" placeholder="Enter Password" required>
 
     <button onclick="login()">Login</button>
+    <p id="loginError" class="error-text"></p>
   </div>
 </div>
 
